manifests/gluster/heketi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: heketi
  namespace: gluster
  labels:
    glusterfs: heketi-service
    deploy-heketi: support
spec:
  # workaround until fixed:
  # https://github.com/kubernetes/kubernetes/pull/29378
  type: NodePort
  selector:
    name: heketi
  ports:
  - port: 8080
    name: heketi
    targetPort: 8080
    nodePort: 32323
